Fix test warnings (#2373)
* no need to catch exceptions in unittests, junit does that for us
* fix warnings on some test executions
* fix some more Mockito warnings
* cleanup compilation warnings in test classes
* removed unused MockPageManager, use the PageManager impl of AEM Mocks instead
* fix more deprecation warnings
* fix codeclimate issue
* added changelog